# rust-chess-engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  download_resources.ps1  download_resources.sh  package_release.ps1
crates/chess_core/: Cargo.toml
crates/chess_core/src/: board.rs  lib.rs  moves.rs  piece.rs  position.rs
crates/chess_engine/: Cargo.toml
crates/chess_engine/src/: ai.rs  evaluation.rs  lib.rs  opening_book.rs  search.rs
crates/chess_ui/: Cargo.toml
crates/chess_ui/src/: lib.rs
docs/: TECHNICAL_DESIGN.md
docs/algorithms/: README.md
docs/engine/: README.md
docs/evaluation/: README.md
docs/search/: README.md
release/: README.md  start_game.bat
release-1.0.0/: LICENSE  README.md
releases/v1.0.0/: README.md
releases/v1.0.0/package/: launch.bat
src/: main.rs
